# funnel-vision

./: .gitignore  .pyre_configuration  README.md  delete_screenshots.py  main.py  pdf_generator.py  pyproject.toml  report_generator.py  scrape_results.json  scraper.py
docs/: PERSISTENCE.md  TESTING.md
frontend/: .env.example  build_output.txt  error.txt  index.html  npm_install_output.txt  package.json  scraper.ts  server.ts  tsc_errors.txt  tsc_errors_utf8.txt  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/python_scripts/: requirements.txt  scraper_agentql.py
frontend/src/: App.tsx  llmClient.ts  safeJson.ts  types.ts
python_scraper/: .env.example  api.py  funnel_scraper.py  main.py  pyproject.toml  pyright_output.txt  report_generator.py  scraper.py  scraper_web.py  start_api.ps1
python_scraper/tests/: __init__.py  test_scraper_web.py
